--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class ="calculator">
-    <input type ="text" placeholder ="0">
+    <input type ="text" id="inputbox" placeholder ="0">
     <div class ="row-1">
       <button  class="operator"> AC</button>
       <button  class="operator"> DEL</button>
@@ -38,7 +38,7 @@
       <button class="operator"> +</button>
     </div>
 
-<div class ="row-4">
+<div class ="row-5">
       <button> 00</button>
       <button> 0</button>
       <button> .</button>
@@ -48,5 +48,7 @@
 
 
   </div>
+  
+  <script src="script.js"></script>
 </body>
 </html>
